--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/Planejamento/Create.cshtml
@@ -22,7 +22,7 @@
                                 <select class="form-control" asp-for="Organizacao" id="select-organizacao" onchange="loadBlocosAndUsuarios()">
                                     @foreach (var item in ViewBag.Organizacoes)
                                     {
-                                        <option value="@item.Id"> @item.Cnpj | @item.RazaoSocial </option>
+                                        <option value="@item.Id"> @item.RazaoSocial </option>
                                     }
                                 </select>
                                 <span class="text-danger"></span>
@@ -33,7 +33,7 @@
                                     <select class="form-control" asp-for="Bloco" onchange="loadSalas()" id="select-bloco">
                                         @foreach (var item in ViewBag.Blocos)
                                         {
-                                            <option value="@item.Id"> @item.Id | @item.Titulo </option>
+                                            <option value="@item.Id"> @item.Titulo </option>
                                         }
                                     </select>
                                     <span asp-validation-for="Bloco" class="text-danger"></span>
@@ -43,7 +43,7 @@
                                     <select class="form-control" asp-for="Planejamento.SalaId" id="select-sala">
                                         @foreach (var item in ViewBag.Salas)
                                         {
-                                            <option value="@item.Id"> @item.Id | @item.Titulo </option>
+                                            <option value="@item.Id"> @item.Titulo </option>
                                         }
                                     </select>
                                     <span asp-validation-for="Planejamento.SalaId" class="text-danger"></span>
@@ -53,7 +53,7 @@
                                     <select class="form-control" asp-for="Planejamento.UsuarioId" id="select-usuario">
                                         @foreach (var item in ViewBag.Usuarios)
                                         {
-                                            <option value="@item.Id"> @item.Cpf | @item.Nome </option>
+                                            <option value="@item.Id"> @item.Nome </option>
                                         }
                                     </select>
                                     <span asp-validation-for="Planejamento.UsuarioId" class="text-danger"></span>
