--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ReservaSala/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ReservaSala/Edit.cshtml
@@ -21,20 +21,32 @@
                                 <input hidden asp-for="HorarioSalaModel.SalaId" class="form-control" />
                                 <input hidden asp-for="HorarioSalaModel.UsuarioId" class="form-control" />
                                 <div class="form-group">
-                                    <label class="form-control-label" for="select-bloco">Organização</label>
-                                    @Html.DropDownListFor(model => model.OrganizacaoModel, ViewBag.organizacoes as SelectList, new
-                               { @class = "form-control", @id = "select-org", @disabled = "disabled" })
+                                    <label class="form-control-label" for="select-org">Organização</label>
+                                    <select class="form-control" id="select-org" asp-for="OrganizacaoModel">
+                                        @foreach (var item in ViewBag.organizacoes as SelectList)
+                                        {
+                                            <option value="@item.Value"> @item.Text </option>
+                                        }
+                                    </select>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-control-label" for="select-bloco">Filtrar Salas por Bloco</label>
-                                    @Html.DropDownListFor(model => model.BlocoModel, ViewBag.blocos as SelectList, new
-                               { @class = "form-control", @id = "select-bloco", @disabled = "disabled" })
+                                    <select class="form-control" id="select-bloco" asp-for="BlocoModel">
+                                        @foreach (var item in ViewBag.blocos as SelectList)
+                                        {
+                                            <option value="@item.Value"> @item.Text </option>
+                                        }
+                                    </select>
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="HorarioSalaModel" class="form-control-label" for="select-sala">Selecionar Sala</label>
-                                    @Html.DropDownListFor(model => model.HorarioSalaModel.SalaId, ViewBag.salas as SelectList, new
-                               { @class = "form-control", @id = "select-sala", @disabled = "disabled" })
-                                    <span asp-validation-for="HorarioSalaModel" class="text-danger"></span>
+                                    <label asp-for="HorarioSalaModel.SalaId" class="form-control-label" for="select-sala">Selecionar Sala</label>
+                                    <select class="form-control" id="select-sala" asp-for="HorarioSalaModel.SalaId">
+                                        @foreach (var item in ViewBag.salas as SelectList)
+                                        {
+                                            <option value="@item.Value"> @item.Text </option>
+                                        }
+                                    </select>
+                                    <span asp-validation-for="HorarioSalaModel.SalaId" class="text-danger"></span>
                                 </div>
                                 <div class="ocupation col-md-10">
                                     <div class="form-group align-element ">
