--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ReservaSala/Index.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/ReservaSala/Index.cshtml
@@ -82,8 +82,8 @@
                                                             </button>
                                                         </div>
                                                         <div class="modal-body text-center">
-                                                            <h5>Sala</h5><p>@item.HorarioSalaModel.SalaId - @item.SalaModel.Titulo</p>
-                                                            <h5>Bloco</h5><p>@item.SalaModel.BlocoTitulo - @item.SalaModel.BlocoTitulo</p>
+                                                            <h5>Sala</h5><p>@item.SalaModel.Titulo</p>
+                                                            <h5>Bloco</h5><p>@item.SalaModel.BlocoTitulo 
                                                             <h5>@servidor</h5> <p>@item.UsuarioModel.Nome</p>
                                                             <h5>Data</h5> <p>@item.HorarioSalaModel.Data</p>
                                                             <h5>Horário</h5> <p>@item.HorarioSalaModel.HorarioInicio às @item.HorarioSalaModel.HorarioFim</p>
