--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/HardwareDeSala/Index.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/HardwareDeSala/Index.cshtml
@@ -89,9 +89,8 @@
                                                             </button>
                                                         </div>
                                                         <div class="modal-body text-center">
-                                                            <h5>Código</h5><p>@item.Id</p>
                                                             <h5>Mac</h5><p>@item.MAC</p>
-                                                            <h5>Bloco</h5> <p>@item.SalaId.Id</p>
+                                                            <h5>Bloco</h5> <p>@item.SalaId.BlocoTitulo</p>
                                                             <h5>Descrição</h5> <p>@item.TipoHardwareId.Descricao</p>
                                                         </div>
 
