--- a/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/SalaParticular/Edit.cshtml
+++ b/Codigo/ModuloDeSoftware/AutomacaoSalas/SalasWeb/Views/SalaParticular/Edit.cshtml
@@ -26,7 +26,7 @@
                                 <select class="form-control" asp-for="Organizacao" id="select-organizacao" onchange="loadBlocosAndUsuarios()">
                                     @foreach (var item in ViewBag.Organizacoes)
                                     {
-                                        <option value="@item.Id"> @item.Cnpj | @item.RazaoSocial </option>
+                                        <option value="@item.Id"> @item.RazaoSocial </option>
                                     }
                                 </select>
                                 <span class="text-danger"></span>
@@ -37,7 +37,7 @@
                                     <select class="form-control" asp-for="BlocoSalas" onchange="loadSalas()" id="select-bloco">
                                         @foreach (var item in ViewBag.Blocos)
                                         {
-                                            <option value="@item.Id"> @item.Id | @item.Titulo </option>
+                                            <option value="@item.Id"> @item.Titulo </option>
                                         }
                                     </select>
                                     <span asp-validation-for="BlocoSalas" class="text-danger"></span>
@@ -47,7 +47,7 @@
                                     <select class="form-control" asp-for="SalaParticular.SalaId" id="select-sala">
                                         @foreach (var item in ViewBag.Salas)
                                         {
-                                            <option value="@item.Id"> @item.Id | @item.Titulo </option>
+                                            <option value="@item.Id"> @item.Titulo </option>
                                         }
                                     </select>
                                     <span asp-validation-for="SalaParticular.SalaId" class="text-danger"></span>
@@ -58,7 +58,7 @@
                                 <select class="form-control" asp-for="SalaParticular.UsuarioId" id="select-usuario">
                                     @foreach (var item in ViewBag.Usuarios)
                                     {
-                                        <option value="@item.Id"> @item.Cpf | @item.Nome </option>
+                                        <option value="@item.Id">  @item.Nome </option>
                                     }
                                 </select>
                                 <span asp-validation-for="SalaParticular.UsuarioId" class="text-danger"></span>
